@@ -1,5 +1,12 @@
 2006-02-23  Tim Waugh  <twaugh@redhat.com>
 
+	* cupsppd.h (PPD): Moved this here from..
+	* cupsppd.c: ..here.
+	(PPD_writeFd): No longer static.
+
+	* cupsconnection.c (Connection_addPrinter): Accept 'ppd' keyword,
+	for cups.PPD object.
+
 	* cupsppd.c (PPD_init): Open handle to PPD file.
 	(PPD_dealloc): Close it.
 	(PPD_writeFd): Implemented.
